--- a/MyCity4Kids/MyCity4Kids/res/layout/blogger_profile_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/blogger_profile_activity.xml
@@ -402,10 +402,33 @@
             android:background="@color/light_grey1" />
 
         <com.mycity4kids.widget.CustomFontTextView
-            android:id="@+id/videosSectionTextView"
+            android:id="@+id/storySectionTextView"
             android:layout_width="match_parent"
             android:layout_height="42dp"
             android:layout_below="@+id/underline_1"
+            android:drawableLeft="@drawable/ic_article"
+            android:drawablePadding="20dp"
+            android:gravity="center_vertical"
+            android:paddingLeft="10dp"
+            android:text="@string/myprofile.section.short_story_label"
+            app:fontName="oswald.ttf" />
+
+        <View
+            android:id="@+id/underline_2"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_below="@+id/storySectionTextView"
+            android:layout_marginEnd="20dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginStart="40dp"
+            android:background="@color/light_grey1" />
+
+        <com.mycity4kids.widget.CustomFontTextView
+            android:id="@+id/videosSectionTextView"
+            android:layout_width="match_parent"
+            android:layout_height="42dp"
+            android:layout_below="@+id/underline_2"
             android:drawableLeft="@drawable/ic_video"
             android:drawablePadding="20dp"
             android:gravity="center_vertical"
@@ -414,7 +437,7 @@
             app:fontName="oswald.ttf" />
 
         <View
-            android:id="@+id/underline_2"
+            android:id="@+id/underline_3"
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_below="@+id/videosSectionTextView"
@@ -428,7 +451,7 @@
             android:id="@+id/activitySectionTextView"
             android:layout_width="match_parent"
             android:layout_height="42dp"
-            android:layout_below="@+id/underline_2"
+            android:layout_below="@+id/underline_3"
             android:drawableLeft="@drawable/ic_activity"
             android:drawablePadding="20dp"
             android:gravity="center_vertical"
@@ -437,7 +460,7 @@
             app:fontName="oswald.ttf" />
 
         <View
-            android:id="@+id/underline_3"
+            android:id="@+id/underline_4"
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_below="@+id/activitySectionTextView"
@@ -451,7 +474,7 @@
             android:id="@+id/rankingSectionTextView"
             android:layout_width="match_parent"
             android:layout_height="42dp"
-            android:layout_below="@+id/underline_3"
+            android:layout_below="@+id/underline_4"
             android:drawableLeft="@drawable/ic_my_ranking"
             android:drawablePadding="15dp"
             android:gravity="center_vertical"
@@ -461,7 +484,7 @@
             app:fontName="oswald.ttf" />
 
         <View
-            android:id="@+id/underline_4"
+            android:id="@+id/underline_5"
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_below="@+id/rankingSectionTextView"
