Stories sharing bitmap creation

--- a/MyCity4Kids/MyCity4Kids/res/layout/add_short_story_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/add_short_story_activity.xml
@@ -1,95 +1,162 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:orientation="vertical">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        android:minHeight="?attr/actionBarSize"
-        app:theme="@style/ToolbarTheme"
-        app:titleTextAppearance="@style/ToolbarTheme.Title">
-
-        <RelativeLayout
-            android:id="@+id/toolbarRelativeLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:visibility="visible">
-
-            <com.mycity4kids.widget.CustomFontTextView
-                android:id="@+id/toolbarTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:text="@string/short_s.add_story"
-                android:textColor="@color/user_activities.toolbar.title"
-                android:textSize="20sp"
-                app:fontName="oswald_regular.ttf" />
-
-            <com.mycity4kids.widget.CustomFontTextView
-                android:id="@+id/publishTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:padding="12dp"
-                android:text="@string/editor.publish"
-                android:textColor="@color/editor.publish"
-                android:textSize="20sp"
-                app:fontName="oswald_regular.ttf" />
-        </RelativeLayout>
-    </android.support.v7.widget.Toolbar>
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:gravity="center"
-        android:scrollbars="horizontal"
-        android:visibility="visible" />
-
-    <com.mycity4kids.widget.CustomFontEditText
-        android:id="@+id/storyTitleEditText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@null"
-        android:hint="@string/short_s.add.title_hint"
-        android:maxLines="2"
-        android:paddingBottom="15dp"
-        android:paddingLeft="14dp"
-        android:paddingRight="14dp"
-        android:paddingTop="15dp"
-        android:textColor="@color/short_story.light_black_color"
-        android:textSize="17sp"
-        app:fontName="georgia.ttf" />
-
-    <View
-        android:id="@+id/underline"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/light_underline" />
-
-    <com.mycity4kids.widget.CustomFontEditText
-        android:id="@+id/storyBodyEditText"
+    <RelativeLayout
+        android:id="@+id/shareSSView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@null"
-        android:gravity="top|left"
-        android:hint="@string/short_s.add.body_hint"
-        android:paddingLeft="14dp"
-        android:paddingRight="14dp"
-        android:paddingTop="15dp"
-        android:textColor="@color/short_story.light_black_color"
-        android:textSize="16sp"
-        app:fontName="georgia.ttf" />
+        android:background="@drawable/ss_share_bg"
+        android:gravity="center"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp">
 
+        <com.mycity4kids.widget.CustomFontTextView
+            android:id="@+id/titleTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:maxLines="2"
+            android:paddingBottom="15dp"
+            android:paddingLeft="14dp"
+            android:paddingRight="14dp"
+            android:paddingTop="15dp"
+            android:text=""
+            android:textColor="@color/short_story.light_black_color"
+            android:textSize="18sp"
+            app:fontName="georgia.ttf" />
+
+        <View
+            android:id="@+id/separator"
+            android:layout_width="80dp"
+            android:layout_height="1dp"
+            android:layout_below="@+id/titleTextView"
+            android:layout_marginLeft="14dp"
+            android:background="@color/short_story.light_black_color" />
+
+        <com.mycity4kids.widget.CustomFontTextView
+            android:id="@+id/bodyTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/separator"
+            android:lineSpacingExtra="4dp"
+            android:paddingLeft="14dp"
+            android:paddingRight="14dp"
+            android:paddingTop="15dp"
+            android:text=""
+            android:textColor="@color/short_story.light_black_color"
+            android:textSize="16sp"
+            app:fontName="georgia.ttf" />
+
+        <com.mycity4kids.widget.CustomFontTextView
+            android:id="@+id/authorTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/bodyTextView"
+            android:inputType="textCapSentences"
+            android:padding="14dp"
+            android:text=""
+            android:textColor="@color/short_story.light_black_color"
+            android:textSize="16sp"
+            app:fontName="georgia_bold.ttf" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white"
+        android:elevation="2dp">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="?attr/colorPrimary"
+            android:minHeight="?attr/actionBarSize"
+            app:theme="@style/ToolbarTheme"
+            app:titleTextAppearance="@style/ToolbarTheme.Title">
+
+            <RelativeLayout
+                android:id="@+id/toolbarRelativeLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="visible">
+
+                <com.mycity4kids.widget.CustomFontTextView
+                    android:id="@+id/toolbarTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:text="@string/short_s.add_story"
+                    android:textColor="@color/user_activities.toolbar.title"
+                    android:textSize="20sp"
+                    app:fontName="oswald_regular.ttf" />
+
+                <com.mycity4kids.widget.CustomFontTextView
+                    android:id="@+id/publishTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:padding="12dp"
+                    android:text="@string/editor.publish"
+                    android:textColor="@color/editor.publish"
+                    android:textSize="20sp"
+                    app:fontName="oswald_regular.ttf" />
+            </RelativeLayout>
+        </android.support.v7.widget.Toolbar>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/toolbar"
+            android:layout_marginTop="5dp"
+            android:gravity="center"
+            android:scrollbars="horizontal"
+            android:visibility="visible" />
+
+        <com.mycity4kids.widget.CustomFontEditText
+            android:id="@+id/storyTitleEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/recyclerView"
+            android:background="@null"
+            android:hint="@string/short_s.add.title_hint"
+            android:maxLines="2"
+            android:paddingBottom="15dp"
+            android:paddingLeft="14dp"
+            android:paddingRight="14dp"
+            android:paddingTop="15dp"
+            android:textColor="@color/short_story.light_black_color"
+            android:textSize="17sp"
+            app:fontName="georgia.ttf" />
+
+        <View
+            android:id="@+id/underline"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/light_underline" />
+
+        <com.mycity4kids.widget.CustomFontEditText
+            android:id="@+id/storyBodyEditText"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/storyTitleEditText"
+            android:background="@null"
+            android:gravity="top|left"
+            android:hint="@string/short_s.add.body_hint"
+            android:paddingLeft="14dp"
+            android:paddingRight="14dp"
+            android:paddingTop="15dp"
+            android:textColor="@color/short_story.light_black_color"
+            android:textSize="16sp"
+            app:fontName="georgia.ttf" />
+    </RelativeLayout>
     <!--<FrameLayout-->
     <!--android:id="@+id/content_frame"-->
     <!--android:layout_width="match_parent"-->
@@ -97,4 +164,5 @@
     <!--android:layout_above="@+id/navigation"-->
     <!--android:layout_below="@+id/toolbarUnderline"-->
     <!--android:background="@android:color/white" />-->
-</LinearLayout>
+
+</RelativeLayout>
