--- a/MyCity4Kids/MyCity4Kids/res/layout/topics_short_stories_tab_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/topics_short_stories_tab_fragment.xml
@@ -98,7 +98,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="10dp"
-                android:text="@string/no_article.be_first"
+                android:text="@string/no_story.be_first"
                 android:textSize="16sp"
                 app:fontName="oswald.ttf" />
 
