--- a/MyCity4Kids/MyCity4Kids/res/layout/ss_comment_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/ss_comment_item.xml
@@ -47,7 +47,7 @@
             android:paddingLeft="5dp"
             android:paddingRight="5dp"
             android:singleLine="false"
-            android:text="Comment Title"
+            android:text=""
             android:textColor="@color/ad.comment.username"
             android:textSize="@dimen/ad_comments_username"
             app:fontName="oswald_regular.ttf" />
@@ -64,7 +64,7 @@
             android:paddingLeft="5dp"
             android:paddingRight="5dp"
             android:singleLine="false"
-            android:text="Comment Desc"
+            android:text=""
             android:textColor="@color/ad.comment.body"
             android:textSize="@dimen/ad_comments_text"
             app:fontName="open_sans.ttf" />
@@ -84,7 +84,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:padding="5dp"
-                android:text="Reply"
+                android:text="@string/reply"
                 android:textColor="@color/ad.comment.date"
                 android:textSize="@dimen/ad_comments_date"
                 app:fontName="oswald.ttf" />
@@ -110,7 +110,7 @@
             android:paddingBottom="10dp"
             android:paddingLeft="5dp"
             android:paddingTop="10dp"
-            android:text="View All Replies"
+            android:text=""
             android:visibility="gone" />
     </RelativeLayout>
 
