--- a/MyCity4Kids/MyCity4Kids/res/layout/add_ss_comment_reply_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/add_ss_comment_reply_fragment.xml
@@ -53,7 +53,7 @@
                 android:layout_centerVertical="true"
                 android:layout_marginRight="4dp"
                 android:padding="10dp"
-                android:text="@string/short_s.post"
+                android:text="@string/editor.publish"
                 android:textColor="@color/short_story.blue"
                 android:textSize="20sp"
                 app:fontName="oswald_regular.ttf" />
@@ -103,7 +103,7 @@
             android:paddingLeft="5dp"
             android:paddingRight="5dp"
             android:singleLine="false"
-            android:text="Comment Title"
+            android:text=""
             android:textColor="@color/ad.comment.username"
             android:textSize="@dimen/ad_comments_username"
             app:fontName="oswald_regular.ttf" />
@@ -120,7 +120,7 @@
             android:paddingLeft="5dp"
             android:paddingRight="5dp"
             android:singleLine="false"
-            android:text="Comment Desc"
+            android:text=""
             android:textColor="@color/ad.comment.body"
             android:textSize="@dimen/ad_comments_text"
             app:fontName="open_sans.ttf" />
@@ -140,7 +140,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:padding="5dp"
-                android:text="Date"
+                android:text=""
                 android:textColor="@color/ad.comment.date"
                 android:textSize="@dimen/ad_comments_date"
                 app:fontName="oswald.ttf" />
@@ -155,7 +155,7 @@
             android:paddingBottom="10dp"
             android:paddingLeft="5dp"
             android:paddingTop="10dp"
-            android:text="View All Replies"
+            android:text=""
             android:visibility="gone" />
     </RelativeLayout>
 
