--- a/MyCity4Kids/MyCity4Kids/res/layout/short_story_topics_horizontal_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/short_story_topics_horizontal_item.xml
@@ -33,7 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:gravity="center"
-            android:text="TOPICS"
+            android:text=""
             android:textColor="@color/explore_listing.explore_categories.category_name"
             android:textSize="18sp"
             app:fontName="oswald_regular.ttf" />
