--- a/MyCity4Kids/MyCity4Kids/res/layout/topics_short_stories_tab_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/topics_short_stories_tab_fragment.xml
@@ -79,7 +79,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="No blogs have been bookmarked yet."
+            android:text=""
             android:visibility="gone" />
 
         <RelativeLayout
